# uniinfer

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.gpu  README.md  pyproject.toml
docs/: ARCHITECTURE.md  BENEFICIARIES.md  MARKET_POSITIONING.md  Questions.md  RESEARCH.md  ROADMAP.md  TESTING_GUIDE.md
src/uniinfer/: __init__.py
src/uniinfer/api/: chat_store.py  dashboard_schemas.py  download_manager.py  routes_completions.py  routes_dashboard.py  routes_models.py  schemas.py  server.py  streaming.py
src/uniinfer/backends/: interface.py  llamacpp.py  onnxrt.py  registry.py  transformers_backend.py
src/uniinfer/cli/: main.py
src/uniinfer/config/: engine_config.py  serving_config.py
src/uniinfer/engine/: __init__.py  diagnostics.py  engine.py  fallback.py  request.py  sampling.py  scheduler.py
src/uniinfer/hal/: __init__.py  cpu_adapter.py  cuda_adapter.py  discovery.py  health.py  interface.py  rocm_adapter.py  vulkan_adapter.py
src/uniinfer/metrics/: prometheus.py
src/uniinfer/models/: __init__.py  aliases.py  converter.py  fitting.py  gguf_metadata.py  quantization.py  registry.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_aliases.py  test_backend_registry.py  test_chat_store.py  test_config.py  test_dashboard_schemas.py  test_delete_cached.py  test_diagnostics.py  test_discovery.py  test_fallback.py  test_fitting.py  test_format_detection.py  test_gguf_metadata.py  test_health.py  test_quantization.py  test_scheduler.py  test_schemas.py  test_sdk_chat.py  test_serving_config.py  test_transformers_backend.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts  hooks.ts  types.ts
web/src/components/: ChatMessages.tsx  ChatSessionList.tsx  DiagnosticsPanel.tsx  MemoryGauge.tsx  QueueIndicator.tsx  (+2 more)
(+17 files in other folders)
